fixed issue when parent element of component has 'text-align:center', calender's position is broken

--- a/css/DayPicker.scss
+++ b/css/DayPicker.scss
@@ -3,7 +3,6 @@
 .DayPicker {
   background: $react-dates-color-white;
   position: relative;
-  text-align: left;
 }
 
 .DayPicker--horizontal {
